# education-benchmarking-and-insights

./: .geminiignore  .gitattributes  .gitignore  .mailmap  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CONTRIBUTING.md  GEMINI.md  Makefile  README.md  artifact_00_scope.md  artifact_01_schema.md  artifact_03_optimization.md  artifact_05_adr.md  db_agent.sh  package-lock.json
bau/pipeline/: .gitignore  pyproject.toml
bau/pipeline/pipeline/: VMFI-pipeline.ipynb  schemas.py
bau/pipeline/vmfi/: calculations.py  comparator-sets.ipynb  mappings.py  metric-rag.ipynb  pre-processing.ipynb  rag.py  schemas.py  scratch.ipynb  test.ipynb
data-pipeline/: .env-example  .envrc  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  GEMINI.md  Makefile  README.md  pyproject.toml
data-pipeline/ad_hoc_comparator_analysis/: README.md  main.py  requirements.txt
data-pipeline/ad_hoc_comparator_analysis/config/: settings.yaml
data-pipeline/ad_hoc_comparator_analysis/src/: functions.py  report_generators.py
data-pipeline/docker/: docker-compose.yml
data-pipeline/docker/api/: Dockerfile
data-pipeline/docker/pipeline-worker/: Dockerfile
data-pipeline/pipeline-worker/: Dockerfile  odbc.ini
data-pipeline/pipelines/: build.yaml
data-pipeline/scripts/: trigger_pipeline_run.py
data-pipeline/src/: .env  comparator_sets.py  main.py  mappings.py  output_schemas.py  pre_processing.py  rag.py  schemas.py
data-pipeline/src/pipeline/: bfr.py  comparator_sets.py  config.py  database.py  domain_model.py  input_schemas.py  log.py  main.py  maintained_schools.py  mappings.py  message.py  output_schemas.py  pre_processing.py  rag.py  stats.json  stats_collector.py  storage.py
data-pipeline/src/pipeline/comparator_sets/: __init__.py  calculations.py  config.py  main.py  orchestrator.py
data-pipeline/src/pipeline/config/: __init__.py  local_authority.py
data-pipeline/src/pipeline/input_schemas/: README.md  __init__.py  aar_academies.py  aar_central_services.py  bfr.py  census_pupils.py  census_workforce.py  cfo.py  cfr_raw.py  dsg.py  gias.py  high_exec_pay.py  high_needs_places.py  hospital_schools.py  ilr.py  local_authority.py  lookup_la.py  maintained_schools_master_list.py  pru.py
data-pipeline/src/pipeline/part_year/: __init__.py  academies.py  common.py  maintained_schools.py
data-pipeline/src/pipeline/pre_processing/: __init__.py  local_authority.py  main.py  maintained_schools.py  spark.py  total_per_unit.py
data-pipeline/src/pipeline/rag/: __init__.py  calculations.py  config.py  engine.py  loader.py  main.py  orchestrator.py
data-pipeline/src/pipeline/utils/: database.py  input.py  log.py  message.py  stats.py  storage.py
data-pipeline/terraform/: README.md  container_apps.tf  data.tf  main.tf  provider.tf  storage.tf  terraform.tfvars  variables.tf
data-pipeline/terraform/container_app/: README.md  data.tf  locals.tf  main.tf  outputs.tf  variables.tf
data-pipeline/tests/: main_test.py
data-pipeline/tests/e2e/: .env  .env-example  .env.local  export_data_hashes.py  synthetic_data_test.py
data-pipeline/tests/unit/: conftest.py  database.py  test_database.py  test_message.py  test_stats_collector.py  test_utils.py
data-pipeline/tests/unit/comparator_sets/: conftest.py  test_buildings.py  test_calculations.py  test_part_year.py  test_pupils.py  test_top_set_urns.py
data-pipeline/tests/unit/part_year/: test_building_comparator.py  test_map_academies.py  test_pupil_comparator.py
data-pipeline/tests/unit/pre_processing/: conftest.py  test_aar.py  test_academies.py  test_bfr.py  test_cdc.py  test_census.py  test_central_services.py  test_custom_data.py  test_gias.py  test_gias_links.py  test_high_exec_pay.py  test_ilr.py  test_ks2.py  test_ks4.py  test_maintained_schools.py  test_map_academies.py  test_mappings.py  test_sen.py  test_total_per_unit.py
data-pipeline/tests/unit/rag/: conftest.py  test_calculations.py  test_loader.py  test_main.py  test_orchestrator.py  test_percentile.py  test_rag.py  test_user_defined_comparator_sets.py
data-pipeline/tests/unit/utils/: test_database.py  test_message.py  test_stats_collector.py
data-pipeline/vmfi/: comparator-sets.ipynb  scratch.ipynb
data-pipeline/workbooks/: comparator-sets.ipynb  metric-rag.ipynb  pre-processing.ipynb  schema_tables.ipynb
databricks/education_benchmarking_and_insights/: README.md  databricks.yml  pyproject.toml
databricks/education_benchmarking_and_insights/resources/: education_benchmarking_and_insights.job.yml  education_benchmarking_and_insights.pipeline.yml
databricks/education_benchmarking_and_insights/src/: notebook.ipynb  pipeline.ipynb
databricks/education_benchmarking_and_insights/src/education_benchmarking_and_insights/: base.py  config.py  main.py
databricks/education_benchmarking_and_insights/tests/: conftest.py  mock_pipelines.py  test_base.py
databricks/education_benchmarking_and_insights/tests/bfr/: test_forecast_and_risk.py  test_it_spend.py  test_preprocessing.py
pipeline/: .gitignore  Makefile  README.md  pyproject.toml
pipeline/docker/: Dockerfile
pipeline/pipelines/: build.yaml
pipeline/src/: main.py
pipeline/tests/: conftest.py  main_test.py
(+8402 files in other folders)
