[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Colin <colinbul@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.2"
