[project]
name = "education_benchmarking_and_insights"
version = "0.0.1"
authors = [{ name = "murdo.moyse@education.gov.uk" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "databricks-dlt>=0.3.0",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    # databricks-connect can be used to run parts of this project locally.
    # Note that for local development, you should use a version that is not newer
    # than the remote cluster or serverless compute you connect to.
    # See also https://docs.databricks.com/dev-tools/databricks-connect.html.
    "databricks-connect>=15.4,<15.5",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/education_benchmarking_and_insights"]

[project.scripts]
main = "education_benchmarking_and_insights.main:main"
