[project]
name = "education_benchmarking_and_insights"
version = "0.0.1"
authors = [{ name = "murdo.moyse@education.gov.uk" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/education_benchmarking_and_insights"]

[project.scripts]
main = "education_benchmarking_and_insights.main:main"
